[project]
name = "sft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg>=1.4",
    "huggingface-hub>=1.13.0",
    "ipywidgets>=8.1.8",
    "requests>=2.33.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
]
